Fixed issues with the way GMS resolved the group synchronization.